--- a/video.html
+++ b/video.html
@@ -39,7 +39,7 @@
 
 		<p>Video courtesy of Allison Sweet.</p>
 
-		<script src="/js/video.js"></script>
+		<script src="js/video.js"></script>
 	</main>
 </body>
 
